--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><img src="images/logo_white.png" alt="" class="brand-image"/></a>
+          <a class="navbar-brand" href="{{ site.path }}"><img src="images/logo_white.png" alt="" class="brand-image"/></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
