added products category and few products

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,13 +17,13 @@
             <li {% if page.url == "/media.html" %} class="active" {% endif %}><a href="media.html" >Media & Events</a></li>
             <li {% if page.url == "/contact.html" %} class="active" {% endif %}><a href="contact.html">Contact</a></li>
             <li class="social-icons">
-              <a href="https://www.instagram.com/{{site.instagram}}"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+              <a href="https://www.instagram.com/{{ site.instagram }}"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             </li>
             <li class="social-icons">
-              <a href="https://www.facebook.com/{site.facebook}"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+              <a href="https://www.facebook.com/{{ site.facebook }}"><i class="fa fa-facebook" aria-hidden="true"></i></a>
             </li>
             <li class="social-icons">
-              <a href="https://www.twitter.com/{site.twitter}"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+              <a href="https://www.twitter.com/{{ site.twitter }}"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             </li>
           </ul>
         </div><!--/.nav-collapse -->
