--- a/css/style.scss
+++ b/css/style.scss
@@ -276,6 +276,24 @@ ol.carousel-indicators {
 .brand-info .info {
 	font-size: 14px;
 }
+.product-modal-link {
+	color: inherit;
+	text-decoration: none;
+	&:hover, &:focus{
+		color: inherit;
+		text-decoration: none;
+	}
+}
+.modal-content{
+	border-radius: 0;
+	border: 2px solid black;
+}
+@media (min-width: 768px){
+	.modal-dialog {
+	    width: 800px;
+	    margin: 30px auto;
+	}
+}
 // footer css
 .footer .row{
 	border-top: 2px solid black;
