--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,10 +6,10 @@
 			</p>
 		</div>
 		<div class="col-xs-2">
-			<a class="legal-link" href="#">LEGALS</a>
+			<a class="legal-link" href="#" style="color: black">LEGALS</a>
 		</div>
 		<div class="col-xs-4 pull-right" style="float: right;">
-			<p style="float: right;">Supported by <img src="images/midaslogo.png" style="width: 100px; margin-left: 12px;"></p>
+			<p style="float: right;">Supported by <a href="http://midasindia.net" target="_blank"><img src="images/midaslogo.png" style="width: 100px; margin-left: 12px;"></a></p>
 		</div>
 	</div>
 </div> 
