--- a/css/style.scss
+++ b/css/style.scss
@@ -7,6 +7,9 @@
 @import 'variables';
 @import 'nav';
 
+p{
+	font-size: 16px;
+}
 @media (min-width: 1200px){
 .container {
     width: 980px;
@@ -189,6 +192,11 @@ ol.carousel-indicators {
 
 .about-block {
 	font-weight: 700;
+}
+
+.about-block p {
+	text-align: justify;
+	font-weight: normal;
 }
 
 .gallery-image {
