added legals modal, modified images

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,10 +6,30 @@
 			</p>
 		</div>
 		<div class="col-xs-2">
-			<a class="legal-link" href="#" style="color: black">LEGALS</a>
+			<a class="legal-link" href="#" data-toggle="modal" data-target="#legals-modal" style="color: black">LEGALS</a>
 		</div>
 		<div class="col-xs-4 pull-right" style="float: right;">
 			<p style="float: right;">Supported by <a href="http://midasindia.net" target="_blank"><img src="images/midaslogo.png" style="width: 150px; margin-left: 12px;"></a></p>
 		</div>
 	</div>
+</div>
+
+
+
+
+<!-- Legals Modal -->
+<div id="legals-modal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content" style="padding:12px">
+            <h3>Intellectual Property</h3><br>
+            <p>All content available on this website including but not limited to texts, graphics, icons, images and data which is collectively known as "the content" belongs to Scent Sutra and its partners and affiliates. The trademarks, service marks and logos displayed on this website are registered and/or unregistered marks of Scent Sutra and its partners and affiliates.</p>
+
+       <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
 </div>
