--- a/css/style.scss
+++ b/css/style.scss
@@ -185,11 +185,18 @@ ol.carousel-indicators {
 }
 .member-info{
     border-top: 4px solid black;
-    padding: 58px 0;
+    /* padding: 58px 0; */
     text-align: center;
     font-weight: 700;
+    width: 100%;
+    height: 116px;
+    display: table;
 }
 
+.member-info .name {
+    display: table-cell;
+    vertical-align: middle;
+}
 .about-block {
 	font-weight: 700;
 }
@@ -311,3 +318,8 @@ ol.carousel-indicators {
 	margin-right: 0px;
 }
 
+
+.member-image {
+    max-height: 250px;
+    overflow: hidden;
+}
