--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,13 +2,13 @@
   <nav class="navbar navbar-default navbar-custom">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{{ site.path }}"><img src="images/logo_white.png" alt="" class="brand-image"/></a>
+          <a class="navbar-brand" href="/"><img src="images/logo_white.png" alt="" class="brand-image"/></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
