--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -9,6 +9,7 @@ body {
     }
 }
 
+
 .navbar {
     margin-bottom: 0px;
 }
@@ -18,6 +19,10 @@ body {
 	padding: 0px;
 	width: 150px;
 	margin-left: 0px;
+    @media screen and (max-width: $break-small) {
+        width: 90px;
+//        float: none;
+      }
 
 }
 .navbar-brand:hover {
@@ -27,6 +32,10 @@ body {
     width: 150px;
     margin: 0 auto;
     padding: 14px 0;
+    @media screen and (max-width: $break-small) {
+        width: 74px;
+        padding: 6px 0;
+      }
 }
 .navbar-custom {
     border: none;
@@ -40,8 +49,27 @@ body {
 	// border-color: black;
 	// border-bottom: 4px solid black;
 }
+
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: white;
+}
+.navbar-default .navbar-toggle{
+    background-color: black;
+    border-color: black;
+    border: 1px solid rgb(0, 0, 0);
+    margin-top: 24px;
+    border-radius: 0px;
+    &:hover, &:focus{
+
+    }
+}
 .navbar-nav{
     float: right;
+    @media screen and (max-width: $break-small) {
+        float: none;
+        margin: 0px;
+        padding: 6px 0;
+    }
 }
 
 .navbar-nav li a {
@@ -51,6 +79,22 @@ body {
     text-transform: uppercase;
     color: black;
     font-weight: 700;
+    @media screen and (max-width: $break-small) {
+        margin-top: 10px;
+        line-height: 40px;
+    }
+}
+
+@media screen and (max-width: $break-small) {
+    .navbar-nav li.social-icons{
+        display: inline-block;
+    }
+
+    .navbar-nav li.social-icons a i{
+        position: relative;
+        bottom: 5px;
+    }
+
 }
 
 .navbar-nav li.social-icons a {
