--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,8 @@
 ---
 
 // add bootstrap variable settings here
+$break-small: 420px;
+$break-large: 1200px;
 
 @import 'bootstrap';
 @import 'variables';
@@ -62,6 +64,14 @@ section{
     width: 50px;
     height: 50px;
     text-align: center;
+    @media screen and (max-width: $break-small) {
+        border-radius: 50%;
+        background: black;
+        padding-top: 4px;
+        width: 30px;
+        height: 30px;
+        text-align: center;
+      }
 }
 ol.carousel-indicators {
 	left: 50px;
@@ -131,6 +141,9 @@ ol.carousel-indicators {
 	padding: 100px;
 	background-size: cover;
     background-repeat: no-repeat;
+    @media screen and (max-width: $break-small) {
+        padding: 50px;
+    }
 }
 
 .product-section .row {
@@ -144,6 +157,12 @@ ol.carousel-indicators {
     padding-right: 10px;
     padding-left: 10px;
     margin-left: 12px;
+    @media screen and (max-width: $break-small) {
+         margin-right: 0;
+        padding-right: 0px;
+        padding-left: 0px;
+        margin-left: 0px;
+    }
 }
 
 .product-info .name{
@@ -177,6 +196,10 @@ ol.carousel-indicators {
 	background-size: cover;
 	min-height: 400px;
     border: 4px solid black;
+    @media screen and (max-width: $break-small) {
+        min-height: 250px;
+      }
+
 }
 
 .member-block{
@@ -193,6 +216,11 @@ ol.carousel-indicators {
     display: table;
 }
 
+
+.member-image {
+    max-height: 250px;
+    overflow: hidden;
+}
 .member-info .name {
     display: table-cell;
     vertical-align: middle;
@@ -211,6 +239,9 @@ ol.carousel-indicators {
 	padding-right: 0;
 	padding-left: 0;
 	margin: 8px;
+    @media screen and (max-width: $break-small) {
+         margin: -4px;
+    }
 }
 
 // Media page styles
@@ -319,7 +350,3 @@ ol.carousel-indicators {
 }
 
 
-.member-image {
-    max-height: 250px;
-    overflow: hidden;
-}
