--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,14 @@
 <div class="footer container">
 	<div class="row">
-		<div class="col-md-3 col-sm-4">
+		<div class="col-xs-6 col-md-3 col-sm-4">
 			<p class="copyright">
 				Copyright 2017 &copy; scentsutra.com
 			</p>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-md-2">
 			<a class="legal-link" href="#" data-toggle="modal" data-target="#legals-modal" style="color: black">LEGALS</a>
 		</div>
-		<div class="col-xs-4 pull-right" style="float: right;">
+		<div class="col-xs-12 col-md-4 pull-right" style="float: right;">
 			<p style="float: right;">Supported by <a href="http://midasindia.net" target="_blank"><img src="images/midaslogo.png" style="width: 150px; margin-left: 12px;"></a></p>
 		</div>
 	</div>
