--- a/css/style.scss
+++ b/css/style.scss
@@ -251,6 +251,10 @@ ol.carousel-indicators {
 	background-size: cover;
 	min-height: 400px;
     border: 4px solid black;
+    @media screen and (max-width: $break-small) {
+         min-height: 200px;
+        border: 2px solid black;
+    }
 }
 
 .pattern-block .row {
