added more products

--- a/css/style.scss
+++ b/css/style.scss
@@ -308,15 +308,19 @@ ol.carousel-indicators {
 // brands page
 .brand-container{
 	border: 2px solid black;
+    min-height: 360px;
+    margin-bottom: 24px;
 }
 .brand-image {
     width: 55%;
     margin: 0 auto;
+    min-height: 220px;
     img {
         max-height: 220px;
         margin: 0 auto;
         width: auto;
         padding: 12px;
+        
     }
 }
 .brand-info{
